--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,9 +4,37 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <meta name="theme-color" content="#4589ff" />
+    <!-- Primary Meta Tags -->
+    <title>My Coolest Chat!</title>
+    <meta name="title" content="My Coolest Chat!" />
+    <meta name="description" content="Chat with your friends like a boss. 🦄" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://snelsi-chat.now.sh/" />
+    <meta property="og:title" content="My Coolest Chat!" />
+    <meta
+      property="og:description"
+      content="Chat with your friends like a boss. 🦄"
+    />
+    <meta
+      property="og:image"
+      content="https://snelsi-chat.now.sh/chat-preview.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://snelsi-chat.now.sh/" />
+    <meta property="twitter:title" content="My Coolest Chat!" />
+    <meta
+      property="twitter:description"
+      content="Chat with your friends like a boss. 🦄"
+    />
+    <meta
+      property="twitter:image"
+      content="https://snelsi-chat.now.sh/chat-preview.jpg"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
